# vscodeTemplate

./: CMakeLists.txt  README.md
project/: main.cpp
